# jornadadados-bootcamp-python

./: README.md  exercicio.py  pyproject.toml  stone_etl.py  teste1.py  teste2.py
bootcamp-python-1/: pyproject.toml
bootcamp-python-2/: README.md  etl_extract.py  etl_powerbi.py  etl_transform.py  exercicio-2.py  exercicio-4.py  exercicio-etl-pbi.py  stone_etl.py  teste1.py
bootcamp-python-3/: pyproject.toml
bootcamp-python-4/: pyproject.toml
bootcamp-python-5/: pyproject.toml
bootcamp-python-6/: pyproject.toml
