[tool.poetry]
name = "bootcamp-python-2"
version = "0.1.0"
description = ""
authors = ["Icaro Pinheiro <icaroalan27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
